--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>IDOL</h2>
     <h3>개요</h3>
     <p><a href="https://namu.wiki/w/%EC%95%84%EC%9D%B4%EB%8F%8C" 
-        target="_blank" title="나무위키_IDOL">Idol</a>은10대 혹은 20대를 대상으로 높은 인기를 얻는 연예인을 의미한다.
+        target="_blank" title="나무위키_IDOL">Idol</a>이란 10대 혹은 20대를 대상으로 높은 인기를 얻는 연예인을 의미한다.
     </p>
 </body>
 </html>
