인물 추가, 그리드, 글배열 변경 등 수정

--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
     <title>IDOL - WELCOME</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1><a href="index.html">IDOL</a></h1>
-    <ol>
-        <li><a href="1.html">장원영</a></li>
-        <li><a href="2.html">아이린</a></li>
-        <li><a href="3.html">재이</a></li>
-    </ol>
-
-    <h2>IDOL</h2>
-    <h3>개요</h3>
-    <p><a href="https://namu.wiki/w/%EC%95%84%EC%9D%B4%EB%8F%8C" 
-        target="_blank" title="나무위키_IDOL">Idol</a>이란 10대 혹은 20대를 대상으로 높은 인기를 얻는 연예인을 의미한다.
-    </p>
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">장원영</a></li>
+            <li><a href="2.html">아이린</a></li>
+            <li><a href="3.html">재이</a></li>
+            <li><a href="4.html">슈화</a></li>
+            <li><a href="5.html">민니</a></li>
+        </ol>
+        <div id="article">
+            <h2>IDOL</h2>
+            <h3>개요</h3>
+            <p>
+                <img src="itzy.jpg" width="500px"><br>
+                <a href="https://namu.wiki/w/%EC%95%84%EC%9D%B4%EB%8F%8C" 
+                target="_blank" title="나무위키_IDOL">Idol</a>이란 10대 혹은 20대를 대상으로 높은 인기를 얻는 연예인을 의미한다.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
