--- a/2.html
+++ b/2.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>IDOL2 - 아이린</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1><a href="index.html">IDOL</a></h1>
-    <ol>
-        <li><a href="1.html">장원영</a></li>
-        <li><a href="2.html">아이린</a></li>
-        <li><a href="3.html">재이</a></li>
-    </ol>
-
-    <h2>아이린</h2>
-    <h3>개요</h3>
-    <p><a href="https://namu.wiki/w/%EC%95%84%EC%9D%B4%EB%A6%B0" target="_blank" title="나무위키_아이린">아이린</a>은 SM엔터테인먼트 소속 5인조 걸그룹 Red Velvet의 멤버이다. 
-        그룹에서 리더, 센터, 메인래퍼, 서브보컬, 리드댄서를 맡고 있다.</p>
-    <video src="irene.mp4" autoplay="autoplay" autoplay loop muted></video>
-        <h3>데뷔 전</h3>
-    <p>1991년 3월 29일 대구직할시 북구 칠곡지구에서 태어났다.
-        학남고등학교 3학년 때였던 2009년부터 연습생 생활을 시작했다.</p>
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">장원영</a></li>
+            <li><a href="2.html">아이린</a></li>
+            <li><a href="3.html">재이</a></li>
+            <li><a href="4.html">슈화</a></li>
+            <li><a href="5.html">민니</a></li>
+        </ol>
+        <div id="article">
+            <h2>아이린</h2>
+            <h3>개요</h3>
+            <video src="irene.mp4" autoplay="autoplay" width="500px" autoplay loop muted></video>
+            <p><a id="link" href="https://namu.wiki/w/%EC%95%84%EC%9D%B4%EB%A6%B0" target="_blank" title="나무위키_아이린">아이린</a>은 SM엔터테인먼트 소속
+                <strong>5인조 걸그룹 <u>Red Velvet</u></strong>의 멤버이다.
+                그룹에서 리더, 센터, 메인래퍼, 서브보컬, 리드댄서를 맡고 있다.</p>
+            <h3>레전드 페이스캠</h3>
+            <p><iframe width="560" height="315" src="https://www.youtube.com/embed/f_3caTjO6yE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            <h3>데뷔 전</h3>
+            <p>1991년 3월 29일 대구직할시 북구 칠곡지구에서 태어났다.
+                학남고등학교 3학년 때였던 2009년부터 연습생 생활을 시작했다.</p>
+        </div>
+    </div>
 </body>
+
 </html>
