이름 배경 색 변경, margin 및 자잘한 것들 수정

--- a/2.html
+++ b/2.html
@@ -19,8 +19,8 @@
         </ol>
         <div id="article">
             <h2>아이린</h2>
+            <p><video src="irene.mp4" autoplay="autoplay" width="500px" autoplay loop muted></video></p>
             <h3>개요</h3>
-            <video src="irene.mp4" autoplay="autoplay" width="500px" autoplay loop muted></video>
             <p><a id="link" href="https://namu.wiki/w/%EC%95%84%EC%9D%B4%EB%A6%B0" target="_blank" title="나무위키_아이린">아이린</a>은 SM엔터테인먼트 소속
                 <strong>5인조 걸그룹 <u>Red Velvet</u></strong>의 멤버이다.
                 그룹에서 리더, 센터, 메인래퍼, 서브보컬, 리드댄서를 맡고 있다.</p>
