--- a/3.html
+++ b/3.html
@@ -17,8 +17,8 @@
             </ol>
             <div id="article">
                 <h2>재이</h2>
+                <p><video src="j.mp4" autoplay loop muted></video></p>
                 <h3>개요</h3>
-                <video src="j.mp4" autoplay loop muted></video>
                 <p><a id="link" href="https://namu.wiki/w/%EC%9E%AC%EC%9D%B4(STAYC)" target="_blank" title="나무위키_재이">재이</a>는 2020년 11월 12일에 데뷔한 하이업엔터테인먼트 소속 <strong>6인조 걸그룹 <u>STAYC</u></strong>의 멤버이다.</p>
                 <h3>레전드 페이스캠</h3>
                 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/n5e4WrVDEgs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
