--- a/4.html
+++ b/4.html
@@ -17,8 +17,8 @@
             </ol>
             <div id="article">
                 <h2>슈화</h2>
-                <h3>개요</h3>
-                <video src="shuhwa.mp4" width="600px" autoplay loop muted></video>
+                <p><video src="shuhwa.mp4" width="600px" autoplay loop muted></video></p>
+                <h3>개요</h3> 
                 <p><a id="link" href="https://namu.wiki/w/%EC%8A%88%ED%99%94" target="_blank" title="나무위키_슈화">슈화</a>는 대한민국의 가수이다. 큐브엔터테인먼트 소속 <strong>5인조 걸그룹 <u>(여자)아이들</u></strong>의 멤버이다.
                     <br>팀에서 막내, 비주얼, 서브보컬을 담당하고 있다.</p>
                 
