--- a/5.html
+++ b/5.html
@@ -17,8 +17,8 @@
             </ol>
             <div id="article">
                 <h2>민니</h2>
+                <p><video src="https://w.namu.la/s/b04ced30ba90ce1c5ee07e17b51c0ddf4b1d76e8c9eb2e3b97c1aff0c7bdcc2cf2fbce4bfa68de3ba8ec96c026cbf554deb783b3d1fe361a2d8420d58ad8a1251cf5e402b4d753522953e2b1a2ab22654d7dd1650f8f2de5350be583449ebaf6" width="500px" autoplay loop muted></video></p>
                 <h3>개요</h3>
-                <video src="https://w.namu.la/s/b04ced30ba90ce1c5ee07e17b51c0ddf4b1d76e8c9eb2e3b97c1aff0c7bdcc2cf2fbce4bfa68de3ba8ec96c026cbf554deb783b3d1fe361a2d8420d58ad8a1251cf5e402b4d753522953e2b1a2ab22654d7dd1650f8f2de5350be583449ebaf6" width="500px" autoplay loop muted></video>
                 <p><a id="link" href="https://namu.wiki/w/%EB%AF%BC%EB%8B%88" target="_blank" title="나무위키_민니">민니</a>는 대한민국의 가수이다. 큐브엔터테인먼트 소속 5인조 걸그룹 (여자)아이들의 멤버이다.
                     <br>팀에서 미연과 함께 메인보컬을 담당하고 있다.</p>
                 <h3>레전드 페이스캠</h3>
